# vitastick

vpk/: CMakeLists.txt
vpk/sce_sys/livearea/contents/: template.xml
